# QCodeEditor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: QCodeEditorConfig.cmake.in
example/: .gitignore  CMakeLists.txt
example/include/: DiagnosticListItem.hpp  MainWindow.hpp
example/resources/styles/: drakula.xml
example/src/: DiagnosticListItem.cpp  MainWindow.cpp
include/internal/: QCXXHighlighter.hpp  QCodeEditor.hpp  QGLSLHighlighter.hpp  QHighlightBlockRule.hpp  QHighlightRule.hpp  QJSHighlighter.hpp  QJSONHighlighter.hpp  QJavaHighlighter.hpp  QLanguage.hpp  QLineNumberArea.hpp  QLuaCompleter.hpp  QLuaHighlighter.hpp  QPythonCompleter.hpp  QPythonHighlighter.hpp  QStyleSyntaxHighlighter.hpp  QXMLHighlighter.hpp  QtCompat.hpp
resources/: default_style.xml
src/internal/: QCXXHighlighter.cpp  QCodeEditor.cpp  QGLSLCompleter.cpp  QGLSLHighlighter.cpp  QJSHighlighter.cpp  QJSONHighlighter.cpp  QJavaHighlighter.cpp  QLanguage.cpp  QLineNumberArea.cpp  QLuaCompleter.cpp  QLuaHighlighter.cpp  QPythonCompleter.cpp  QPythonHighlighter.cpp  QStyleSyntaxHighlighter.cpp  QSyntaxStyle.cpp  QXMLHighlighter.cpp  QtCompat.hpp
